Change startup dir in tmuxp config. Add test_ prefix for pytest to work.

--- a/.tmuxp.yaml
+++ b/.tmuxp.yaml
@@ -7,10 +7,12 @@ windows:
       panes:
           - shell_command:
               - source /env/bin/activate
-              - nvim ./app
+              - cd ./app
+              - nvim .
           - shell_command:
               - source /env/bin/activate
-              - nvim ./tests
+              - cd ./tests
+              - nvim .
           - shell_command:
               - source /env/bin/activate
               - ipython
